# daedalus-dapp

./: .gitignore  LICENSE  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: artworks.py
backend/app/core/: DaedalusV2_ABI.json
backend/app/schemas/: artwork.py
backend/app/services/: blockchain_service.py  ipfs_service.py
frontend/: artwork.html  index.html  mint.html  package-lock.json  package.json  profile.html  tailwind.config.js
frontend/assets/css/: styles.css
frontend/js/: api.js  app.js  artwork-detail.js  mint.js  profile.js  ui.js  wallet.js
smart-contract/: hardhat.config.js  package-lock.json  package.json
smart-contract/contracts/: DaedalusV2.sol
smart-contract/scripts/: deploy.js
smart-contract/test/: DeadalusV2.test.js
